REGRESSION(r244750): [GTK][WPE] Network process is crashing in all layout tests https://bugs.webkit.org/show_bug.cgi?id=197406

Reviewed by Žan Doberšek.

Do not trasnfer ownership of cachePath to traverseDirectory() lambda, since it's passed also as first argument
and it can be passed as a reference.

* NetworkProcess/cache/NetworkCacheStorage.cpp:
(WebKit::NetworkCache::Storage::deleteOldVersions):

Canonical link: https://commits.webkit.org/211592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244767 268f45cc-cd09-0410-ab3c-d52691b4dbfc