Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp
@@ -1110,7 +1110,7 @@ void Storage::shrink()
 void Storage::deleteOldVersions()
 {
     backgroundIOQueue().dispatch([cachePath = basePath()] () mutable {
-        traverseDirectory(cachePath, [cachePath = WTFMove(cachePath)](const String& subdirName, DirectoryEntryType type) {
+        traverseDirectory(cachePath, [&cachePath](const String& subdirName, DirectoryEntryType type) {
             if (type != DirectoryEntryType::Directory)
                 return;
             if (!subdirName.startsWith(versionDirectoryPrefix))
